# entirius-pylib-template

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/entirius_pylib_template/: __init__.py  template.py
tests/: __init__.py  test_template.py
